tests/toy/neg/001204_mutation.toylang
program a = { program var a : bool; } .
